Fix #257 Apply full width to spin outside of table so that the table overflows only within itself (#262)
* Fix #257 Apply full width to spin outside of table so that the table overflows only
within itself.

* Fix #257, pretty-print JSON for logs field in action receipt table.

--- a/src/client/stylesheets/main.scss
+++ b/src/client/stylesheets/main.scss
@@ -196,3 +196,7 @@
     margin-bottom: 1.7em !important;
   }
 }
+
+.full-width-spin-preloader {
+  width: 100%;
+}
